--- a/application/views/scripts/relatorios/index.phtml
+++ b/application/views/scripts/relatorios/index.phtml
@@ -79,7 +79,7 @@
 <fieldset> 
     <legend>Relatórios de Atividades:</legend>
     <ul>
-        <li><img src="img/xls-icon.png" class="icon-relatorios"/><a class="relatorio" href="<?= $this->url(array("controller" => "relatorios", "action" => "monitoramentos"), null, true) ?>"target="_blank">Monitoramentos</a></li>
+        <li><img src="img/xls-icon.png" class="icon-relatorios"/><a class="relatorio" href="<?= $this->url(array("controller" => "relatorios", "action" => "relatoriocompletomonitoramentos"), null, true) ?>"target="_blank">Monitoramentos</a></li>
         <li><img src="img/xls-icon.png" class="icon-relatorios"/><a class="relatorio" href="<?= $this->url(array("controller" => "relatorios", "action" => "relatoriocompletoespecies"), null, true) ?>"target="_blank">Espécies Capturadas</a></li>
         <li><img src="img/xls-icon.png" class="icon-relatorios"/><a class="relatorio" href="<?= $this->url(array("controller" => "relatorios", "action" => "relatoriocompletoespeciesmes"), null, true) ?>"target="_blank">Espécies Capturadas(Mês)</a></li>
         <li><img src="img/xls-icon.png" class="icon-relatorios"/><a class="relatorio" href="<?= $this->url(array("controller" => "relatorios", "action" => "avistamentos"), null, true) ?>"target="_blank">Avistamentos</a></li>
