--- a/application/views/scripts/barcos/editar.phtml
+++ b/application/views/scripts/barcos/editar.phtml
@@ -703,7 +703,7 @@
         </div>
  <br/>
 <!--37.1 -------------------------------------------------------------->  
-        <a id="anchmotor"></a>
+        <a id="anchfrequencia"></a>
             <fieldset class="noEditable"><legend>Frequência de Manutenção do Motor:</legend>
                 <fieldset class="noEditable"><legend>Adicionar Manutenção:</legend>
                     <div id="base-manutencao">
