--- a/application/views/scripts/coleta-manual/editar.phtml
+++ b/application/views/scripts/coleta-manual/editar.phtml
@@ -171,7 +171,7 @@
     <fieldset class="noEditable"><legend>Pesqueiro:</legend>
                 <fieldset class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
                     <div id="base">
-                        <input class="responsivo" onclick="jsInsertPesqueiroWithTimeAndRange(this.form, '<?= $this->url(array("controller" => "coleta-manual", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['cml_id'] ?>')" type="button" value="Adicionar" />
+                        <input class="responsivo" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "coleta-manual", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['cml_id'] ?>', '')" type="button" value="Adicionar" />
                         <select class="responsivo" style="float:left;" name="nomePesqueiro">
                             <option value="" selected></option>
                             <?php foreach ($this->pesqueiros as $key => $pesqueiro): ?>
@@ -185,34 +185,14 @@
 
                 </fieldset>
                 <br>
-                <fieldset class="noEditable" id="itemArteTipoRows"><legend>Pesqueiros:</legend>
-                    <table id="pesqueiros">
-                        <tr>
-                            <th width="5%">Id Entrevista</th>
-                            <th width="50%">Pesqueiro</th>
-                            <th width="30%">Tempo até o Pesqueiro</th>
-                            <th width="30%">Distância até o Pesqueiro</th>
-                        </tr>
-                        <?php
-                        foreach ($this->vColetaManual as $key => $vColetaManual):
-                            ?>
-                            <tr id="itemArrastoRows">
-                                <td name="inputIdEntrevista"> <?= $vColetaManual['cml_id'] ?> </td>
-                                <td name="inputPesqueiro" > <?= $vColetaManual['paf_pesqueiro'] ?> </td>
-                                <td name="inputTempoaPesqueiro"> <?= $vColetaManual['t_tempoapesqueiro'] ?> </td>
-                                <td name="inputTempoaPesqueiro"> <?= $vColetaManual['t_distapesqueiro'] ?> </td>
-                                <td><input type="button" class="button-del" width="5%" onclick="jsDeletePesqueiro(<?= $this->entrevista['cml_id'] ?>, '<?= $this->url(array("controller" => "coleta-manual", "action" => "deletepesqueiro"), null, true) ?>', <?= $vColetaManual['cml_paf_id'] ?>)"></td>
-                            </tr>
-                        <?php endforeach; ?>
-                    </table>
-                </fieldset>
+                <?php include('tablepesqueiro.phtml'); ?>
             </fieldset>
 <fieldset class="noEditable"><legend>Espécies Capturadas:</legend>
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
             <div id="base">
-                <input class="responsivo" onclick="jsInsertEspecieCapturadaTipoVenda(this.form, '<?= $this->url(array("controller" => "coleta-manual", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['cml_id']?>')" type="button" value="Adicionar" />
-                <select class="responsivo" style="float:left;" name="SelectEspecie" class="espc">
+                <input class="responsivo" onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "coleta-manual", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['cml_id']?>', 'venda')" type="button" value="Adicionar" />
+                <select class="responsivo" style="float:left;" name="selectEspecie" class="espc">
                     <option value="" selected></option>
                     <?php foreach ($this->especies as $key => $especie): ?>
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
@@ -232,31 +212,8 @@
 
         </fieldset>
         <br>
-         <fieldset class="noEditable" id="itemArteTipoRows"><legend>Espécies Capturadas:</legend>
-                <table id="especiesCapturadas">
-                    <tr>
-                        <th width="20%">Id Entrevista</th>
-                        <th width="30%">Espécie Capturada</th>
-                        <th width="20%">Quantidade</th>
-                        <th width="20%">Peso (kg)</th>
-                        <th width="20%">Preço por kg</th>
-                        <th width="10%">Venda</th>
-                    </tr>
-                    <?php
-                    foreach ($this->vEspecieCapturadas as $key => $vEspecieCapturada):
-                        ?>
-                        <tr id="itemEmbarcacoesRows">
-                            <td name="inputEntrevista"> <?= $vEspecieCapturada['cml_id'] ?> </td>
-                            <td name="inputEspecie" > <?= $vEspecieCapturada['esp_nome_comum'] ?> </td>
-                            <td name="inputQuantidade"> <?= $vEspecieCapturada['spc_quantidade'] ?> </td>
-                            <td name="inputPeso"> <?= $vEspecieCapturada['spc_peso_kg'] ?> </td>
-                            <td name="inputPreco"> <?= $vEspecieCapturada['spc_preco'] ?> </td>
-                            <td name="inputTVenda"> <?= $vEspecieCapturada['ttv_tipovenda']?></td>
-                            <td><input type="button" class="button-del" width="5%" onclick="jsDeleteEspecieCapturada(<?= $this->entrevista['cml_id'] ?>, '<?= $this->url(array("controller" => "coleta-manual", "action" => "deletespecie"), null, true) ?>', <?= $vEspecieCapturada['spc_cml_id'] ?>)"></td>
-                        </tr>
-                    <?php endforeach; ?>
-                </table>
-            </fieldset>
+         <?php include('tableespcaptura.phtml'); ?>
+        
     </fieldset>
         <fieldset class="noEditable"><legend>Avistamento:</legend>
         <fieldset class="noEditable"><legend>O Que foi avistado:</legend>
