--- a/application/views/scripts/grosseira/editar.phtml
+++ b/application/views/scripts/grosseira/editar.phtml
@@ -260,9 +260,9 @@
                         <tr id="itemEmbarcacoesRows">
                             <td name="inputEntrevista"> <?= $vEspecieCapturada['grs_id'] ?> </td>
                             <td name="inputEspecie" > <?= $vEspecieCapturada['esp_nome_comum'] ?> </td>
-                            <td name="inputQuantidade"> <?= $vEspecieCapturada['spc_quantidade'] ?> </td>
-                            <td name="inputPeso"> <?= $vEspecieCapturada['spc_peso_kg'] ?> </td>
-                            <td name="inputPreco"> <?= $vEspecieCapturada['spc_preco'] ?> </td>
+                            <td name="inputQuantidade"> <?= $vEspecieCapturada['spc_quantidade'].' Unidades' ?> </td>
+                            <td name="inputPeso"> <?= $vEspecieCapturada['spc_peso_kg'].' kg' ?> </td>
+                            <td name="inputPreco"> <?= 'R$ '.$vEspecieCapturada['spc_preco'] ?> </td>
                             <td><input type="button" class="button-del" width="5%" onclick="jsDeleteEspecieCapturada(<?= $this->entrevista['grs_id'] ?>, '<?= $this->url(array("controller" => "grosseira", "action" => "deletespecie"), null, true) ?>', <?= $vEspecieCapturada['spc_grs_id'] ?>)"></td>
                         </tr>
                     <?php endforeach; ?>
