--- a/application/views/scripts/coleta-manual/editar.phtml
+++ b/application/views/scripts/coleta-manual/editar.phtml
@@ -171,7 +171,7 @@
     <fieldset class="noEditable"><legend>Pesqueiro:</legend>
                 <fieldset class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
                     <div id="base">
-                        <input class="responsivo" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "coleta-manual", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['cml_id'] ?>', '')" type="button" value="Adicionar" />
+                        <input class="responsivo" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "coleta-manual", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['cml_id'] ?>', 'distancia')" type="button" value="Adicionar" />
                         <select class="responsivo" style="float:left;" name="nomePesqueiro">
                             <option value="" selected></option>
                             <?php foreach ($this->pesqueiros as $key => $pesqueiro): ?>
@@ -190,18 +190,18 @@
 <fieldset class="noEditable"><legend>Espécies Capturadas:</legend>
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
-            <div id="base">
+            <div>
                 <input class="responsivo" onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "coleta-manual", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['cml_id']?>', 'venda')" type="button" value="Adicionar" />
-                <select class="responsivo" style="float:left;" name="selectEspecie" class="espc">
+                <select class="responsivo-esp"  name="selectEspecie" class="espc">
                     <option value="" selected></option>
                     <?php foreach ($this->especies as $key => $especie): ?>
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
                     <?php endforeach; ?>
                 </select>
-                <input class="responsivo" style="float:left;" type="text" name="quantidade" placeholder="Quantidade" size="10px">
-                <input class="responsivo" style="float:left;" type="text" name="peso" placeholder="Peso" size="10px">
-                <input class="responsivo" style="float:left;" type="text" name="precokg" placeholder="Preço" size="10px">
-                <select class="responsivo" name="tipoVenda" class="espc">
+                <input class="responsivo-esp"  type="text" name="quantidade" placeholder="Quantidade" size="10px">
+                <input class="responsivo-esp"  type="text" name="peso" placeholder="Peso" size="10px">
+                <input class="responsivo-esp"  type="text" name="precokg" placeholder="Preço" size="10px">
+                <select class="responsivo-esp" name="tipoVenda" class="espc">
                      <?php foreach ($this->tipovenda as $key => $tipovenda): ?>
                         <option value="<?= $tipovenda['ttv_id']?>"><?= $tipovenda['ttv_tipovenda']; ?></option>
                      <?php endforeach; ?>
