--- a/application/views/scripts/grosseira/editar.phtml
+++ b/application/views/scripts/grosseira/editar.phtml
@@ -181,6 +181,7 @@
          <br/>
     
 </fieldset>
+</div>
 </form>
  
  <form>
@@ -191,45 +192,27 @@
 <fieldset class="noEditable"><legend>Pesqueiro:</legend>
         <fieldset class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
             <div id="base">
-                <input class="responsivo" onclick="jsInsertPesqueiroWithTime(this.form, '<?= $this->url(array("controller" => "grosseira", "action" => "insertpesqueiro"), null, true) ?>', '<?=$this->entrevista['grs_id']?>')" type="button" value="Adicionar" />
+                <input class="responsivo" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "grosseira", "action" => "insertpesqueiro"), null, true) ?>', '<?=$this->entrevista['grs_id']?>', 'tempo')" type="button" value="Adicionar" />
                 <select class="responsivo" style="float:left;" name="nomePesqueiro">
                     <option value="" selected></option>
                     <?php foreach ($this->pesqueiros as $key => $pesqueiro): ?>
                         <option value="<?= $pesqueiro['paf_id']; ?>"><?= $pesqueiro['paf_pesqueiro']; ?></option>
                     <?php endforeach; ?>
                 </select>
-                <input class="responsivo" style="float:left;" type="time" name="tempoAPesqueiro" placeholder="Tempo Até pesqueiro" size="10px">
+                <input class="responsivo" style="float:left;" type="time" name="tempoPesqueiro" placeholder="Tempo Até pesqueiro" size="10px">
 
             </div>
 
         </fieldset>
         <br>
-        <fieldset class="noEditable" id="itemArteTipoRows"><legend>Pesqueiros:</legend>
-            <table id="pesqueiros">
-                <tr>
-                    <th width="5%">Id Entrevista</th>
-                    <th width="50%">Pesqueiro</th>
-                    <th width="30%">Tempo até o Pesqueiro</th>
-                </tr>
-                <?php
-                foreach ($this->vGrosseira as $key => $vGrosseira):
-                    ?>
-                    <tr id="itemGrosseiraRows">
-                        <td name="inputIdEntrevista"> <?= $vGrosseira['grs_id'] ?> </td>
-                        <td name="inputPesqueiro" > <?= $vGrosseira['paf_pesqueiro'] ?> </td>
-                        <td name="inputTempoaPesqueiro"> <?= $vGrosseira['t_tempoapesqueiro'] ?> </td>
-                        <td><input type="button" class="button-del" width="5%" onclick="jsDeletePesqueiro(<?= $this->entrevista['grs_id'] ?>, '<?= $this->url(array("controller" => "grosseira", "action" => "deletepesqueiro"), null, true) ?>', <?= $vGrosseira['grs_paf_id'] ?>)"></td>
-                    </tr>
-                <?php endforeach; ?>
-            </table>
-        </fieldset>
+        <?php include('tablepesqueiro.phtml'); ?>
     </fieldset>
 <fieldset class="noEditable"><legend>Espécies Capturadas:</legend>
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
             <div id="base">
-                <input class="responsivo" onclick="jsInsertEspecieCapturada(this.form, '<?= $this->url(array("controller" => "grosseira", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['grs_id']?>')" type="button" value="Adicionar" />
-                <select class="responsivo" style="float:left;" name="SelectEspecie">
+                <input class="responsivo" onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "grosseira", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['grs_id']?>', '')" type="button" value="Adicionar" />
+                <select class="responsivo" style="float:left;" name="selectEspecie">
                     <option value="" selected></option>
                     <?php foreach ($this->especies as $key => $especie): ?>
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
@@ -245,29 +228,7 @@
 
         </fieldset>
         <br>
-         <fieldset class="noEditable" id="itemArteTipoRows"><legend>Espécies Capturadas:</legend>
-                <table id="especiesCapturadas">
-                    <tr>
-                        <th width="20%">Id Entrevista</th>
-                        <th width="30%">Espécie Capturada</th>
-                        <th width="20%">Quantidade</th>
-                        <th width="20%">Peso (kg)</th>
-                        <th width="20%">Preço por kg</th>
-                    </tr>
-                    <?php
-                    foreach ($this->vEspecieCapturadas as $key => $vEspecieCapturada):
-                        ?>
-                        <tr id="itemEmbarcacoesRows">
-                            <td name="inputEntrevista"> <?= $vEspecieCapturada['grs_id'] ?> </td>
-                            <td name="inputEspecie" > <?= $vEspecieCapturada['esp_nome_comum'] ?> </td>
-                            <td name="inputQuantidade"> <?= $vEspecieCapturada['spc_quantidade'].' Unidades' ?> </td>
-                            <td name="inputPeso"> <?= $vEspecieCapturada['spc_peso_kg'].' kg' ?> </td>
-                            <td name="inputPreco"> <?= 'R$ '.$vEspecieCapturada['spc_preco'] ?> </td>
-                            <td><input type="button" class="button-del" width="5%" onclick="jsDeleteEspecieCapturada(<?= $this->entrevista['grs_id'] ?>, '<?= $this->url(array("controller" => "grosseira", "action" => "deletespecie"), null, true) ?>', <?= $vEspecieCapturada['spc_grs_id'] ?>)"></td>
-                        </tr>
-                    <?php endforeach; ?>
-                </table>
-            </fieldset>
+         <?php include('tableespcaptura.phtml'); ?>
     </fieldset>
     <fieldset class="noEditable"><legend>Avistamento:</legend>
         <fieldset class="noEditable"><legend>O Que foi avistado:</legend>
@@ -420,4 +381,3 @@
     <br/> <br/>
     <a href="<?= $this->url(array("controller" => "ficha-diaria", "action" => "editar","id" => $this->monitoramento['fd_id']), null, true) ?>" id="botao-ancora">Voltar à Ficha-Diária</a>
     
-</div>
