--- a/application/views/scripts/linha-fundo/editar.phtml
+++ b/application/views/scripts/linha-fundo/editar.phtml
@@ -208,6 +208,7 @@
             </div>      
         </fieldset>
     </form>
+</div>
    <form>
        <input type="hidden" placeholder = "ID" name="id_entrevista"  value="<?= $this->entrevista['lf_id'] ?>"/><br />
         <input type="hidden" name="id_monitoramento" placeholder="ID"  value="<?= $this->entrevista['mnt_id'] ?>" /><br />
@@ -216,7 +217,7 @@
         <fieldset class="noEditable"><legend>Pesqueiro:</legend>
                 <fieldset class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
                     <div id="base">
-                        <input onclick="jsInsertPesqueiroWithTimeAndRange(this.form, '<?= $this->url(array("controller" => "linha-fundo", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['lf_id'] ?>')" type="button" value="Adicionar" />
+                        <input onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "linha-fundo", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['lf_id'] ?>', 'distancia')" type="button" value="Adicionar" />
                         <select style="float:left;" name="nomePesqueiro">
                             <?php foreach ($this->pesqueiros as $key => $pesqueiro): ?>
                                 <option value="<?= $pesqueiro['paf_id']; ?>"><?= $pesqueiro['paf_pesqueiro']; ?></option>
@@ -229,42 +230,22 @@
 
                 </fieldset>
                 <br>
-                <fieldset class="noEditable" id="itemArteTipoRows"><legend>Pesqueiros:</legend>
-                    <table id="pesqueiros">
-                        <tr>
-                            <th width="5%">Id Entrevista</th>
-                            <th width="50%">Pesqueiro</th>
-                            <th width="30%">Tempo até o Pesqueiro</th>
-                            <th width="30%">Distância até o Pesqueiro</th>
-                        </tr>
-                        <?php
-                        foreach ($this->vLinhaFundo as $key => $vLinhaFundo):
-                            ?>
-                            <tr id="itemLinhaFundoRows">
-                                <td name="inputIdEntrevista"> <?= $vLinhaFundo['lf_id'] ?> </td>
-                                <td name="inputPesqueiro" > <?= $vLinhaFundo['paf_pesqueiro'] ?> </td>
-                                <td name="inputTempoaPesqueiro"> <?= $vLinhaFundo['t_tempoapesqueiro'] ?> </td>
-                                <td name="inputTempoaPesqueiro"> <?= $vLinhaFundo['t_distapesqueiro'] ?> </td>
-                                <td><input type="button" class="button-del" width="5%" onclick="jsDeletePesqueiro(<?= $this->entrevista['lf_id'] ?>, '<?= $this->url(array("controller" => "linha-fundo", "action" => "deletepesqueiro"), null, true) ?>', <?= $vLinhaFundo['lf_paf_id'] ?>)"></td>
-                            </tr>
-                        <?php endforeach; ?>
-                    </table>
-                </fieldset>
+                <?php include('tablepesqueiro.phtml'); ?>
             </fieldset>
 <fieldset class="noEditable"><legend>Espécies Capturadas:</legend>
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
-            <div id="base">
-                <input onclick="jsInsertEspecieCapturadaTipoVenda(this.form, '<?= $this->url(array("controller" => "linha-fundo", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['lf_id']?>')" type="button" value="Adicionar" />
-                <select style="float:left;" name="SelectEspecie" class="espc">
+            <div >
+                <input  onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "linha-fundo", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['lf_id']?>', 'venda')" type="button" value="Adicionar" />
+                <select class="responsivo-esp" name="selectEspecie">
                     <?php foreach ($this->especies as $key => $especie): ?>
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
                     <?php endforeach; ?>
                 </select>
-                <input style="float:left;" type="text" name="quantidade" placeholder="Quantidade" size="10px">
-                <input style="float:left;" type="text" name="peso" placeholder="Peso" size="10px">
-                <input style="float:left;" type="text" name="precokg" placeholder="Preço por kg" size="10px">
-                <select name="tipoVenda" class="espc">
+                <input class="responsivo-esp" type="text" name="quantidade" placeholder="Quantidade" size="10px">
+                <input class="responsivo-esp" type="text" name="peso" placeholder="Peso" size="10px">
+                <input class="responsivo-esp" type="text" name="precokg" placeholder="Preço por kg" size="10px">
+                <select class="responsivo-esp" name="tipoVenda" class="espc">
                      <?php foreach ($this->tipovenda as $key => $tipovenda): ?>
                         <option value="<?= $tipovenda['ttv_id']?>"><?= $tipovenda['ttv_tipovenda']; ?></option>
                      <?php endforeach; ?>
@@ -276,29 +257,7 @@
 
         </fieldset>
         <br>
-         <fieldset class="noEditable" id="itemArteTipoRows"><legend>Espécies Capturadas:</legend>
-                <table id="especiesCapturadas">
-                    <tr>
-                        <th width="20%">Id Entrevista</th>
-                        <th width="30%">Espécie Capturada</th>
-                        <th width="20%">Quantidade</th>
-                        <th width="20%">Peso (kg)</th>
-                        <th width="20%">Preço por kg</th>
-                    </tr>
-                    <?php
-                    foreach ($this->vEspecieCapturadas as $key => $vEspecieCapturada):
-                        ?>
-                        <tr id="itemEmbarcacoesRows">
-                            <td name="inputEntrevista"> <?= $vEspecieCapturada['lf_id'] ?> </td>
-                            <td name="inputEspecie" > <?= $vEspecieCapturada['esp_nome_comum'] ?> </td>
-                            <td name="inputQuantidade"> <?= $vEspecieCapturada['spc_quantidade'].' Unidades' ?> </td>
-                            <td name="inputPeso"> <?= $vEspecieCapturada['spc_peso_kg'].' kg' ?> </td>
-                            <td name="inputPreco"> <?= 'R$ '.$vEspecieCapturada['spc_preco'] ?> </td>
-                            <td><input type="button" class="button-del" width="5%" onclick="jsDeleteEspecieCapturada(<?= $this->entrevista['lf_id'] ?>, '<?= $this->url(array("controller" => "linha-fundo", "action" => "deletespecie"), null, true) ?>', <?= $vEspecieCapturada['spc_lf_id'] ?>)"></td>
-                        </tr>
-                    <?php endforeach; ?>
-                </table>
-            </fieldset>
+         <?php include('tableespcaptura.phtml'); ?>
     </fieldset>
     <fieldset class="noEditable"><legend>Avistamento:</legend>
         <fieldset class="noEditable"><legend>O Que foi avistado:</legend>
@@ -450,4 +409,3 @@
     <br/> <br/>
     <a href="<?= $this->url(array("controller" => "ficha-diaria", "action" => "editar","id" => $this->monitoramento['fd_id']), null, true) ?>" id="botao-ancora">Voltar à Ficha-Diária</a>
     
-</div>
