--- a/application/views/scripts/linha/editar.phtml
+++ b/application/views/scripts/linha/editar.phtml
@@ -191,44 +191,26 @@
 <fieldset class="noEditable"><legend>Pesqueiro:</legend>
         <fieldset class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
             <div id="base">
-                <input onclick="jsInsertPesqueiroWithTime(this.form, '<?= $this->url(array("controller" => "linha", "action" => "insertpesqueiro"), null, true) ?>', '<?=$this->entrevista['lin_id']?>')" type="button" value="Adicionar" />
+                <input onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "linha", "action" => "insertpesqueiro"), null, true) ?>', '<?=$this->entrevista['lin_id']?>', 'tempo')" type="button" value="Adicionar" />
                 <select style="float:left;" name="nomePesqueiro">
                     <?php foreach ($this->pesqueiros as $key => $pesqueiro): ?>
                         <option value="<?= $pesqueiro['paf_id']; ?>"><?= $pesqueiro['paf_pesqueiro']; ?></option>
                     <?php endforeach; ?>
                 </select>
-                <input style="float:left;" type="time" name="tempoAPesqueiro" placeholder="Tempo Até pesqueiro" size="10px">
+                <input style="float:left;" type="time" name="tempoPesqueiro" placeholder="Tempo Até pesqueiro" size="10px">
 
             </div>
 
         </fieldset>
         <br>
-        <fieldset class="noEditable" id="itemArteTipoRows"><legend>Pesqueiros:</legend>
-            <table id="pesqueiros">
-                <tr>
-                    <th width="5%">Id Entrevista</th>
-                    <th width="50%">Pesqueiro</th>
-                    <th width="30%">Tempo até o Pesqueiro</th>
-                </tr>
-                <?php
-                foreach ($this->vLinha as $key => $vLinha):
-                    ?>
-                    <tr id="itemLinhaRows">
-                        <td name="inputIdEntrevista"> <?= $vLinha['lin_id'] ?> </td>
-                        <td name="inputPesqueiro" > <?= $vLinha['paf_pesqueiro'] ?> </td>
-                        <td name="inputTempoaPesqueiro"> <?= $vLinha['t_tempoapesqueiro'] ?> </td>
-                        <td><input type="button" class="button-del" width="5%" onclick="jsDeletePesqueiro(<?= $this->entrevista['lin_id'] ?>, '<?= $this->url(array("controller" => "linha", "action" => "deletepesqueiro"), null, true) ?>', <?= $vLinha['lin_paf_id'] ?>)"></td>
-                    </tr>
-                <?php endforeach; ?>
-            </table>
-        </fieldset>
+        <?php include('tablepesqueiro.phtml'); ?>
     </fieldset>
 <fieldset class="noEditable"><legend>Espécies Capturadas:</legend>
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
             <div id="base">
-                <input onclick="jsInsertEspecieCapturada(this.form, '<?= $this->url(array("controller" => "linha", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['lin_id']?>')" type="button" value="Adicionar" />
-                <select style="float:left;" name="SelectEspecie">
+                <input onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "linha", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['lin_id']?>', '')" type="button" value="Adicionar" />
+                <select style="float:left;" name="selectEspecie">
                     <?php foreach ($this->especies as $key => $especie): ?>
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
                     <?php endforeach; ?>
@@ -243,29 +225,8 @@
 
         </fieldset>
         <br>
-         <fieldset class="noEditable" id="itemArteTipoRows"><legend>Espécies Capturadas:</legend>
-                <table id="especiesCapturadas">
-                    <tr>
-                        <th width="20%">Id Entrevista</th>
-                        <th width="30%">Espécie Capturada</th>
-                        <th width="20%">Quantidade</th>
-                        <th width="20%">Peso (kg)</th>
-                        <th width="20%">Preço por kg</th>
-                    </tr>
-                    <?php
-                    foreach ($this->vEspecieCapturadas as $key => $vEspecieCapturada):
-                        ?>
-                        <tr id="itemEmbarcacoesRows">
-                            <td name="inputEntrevista"> <?= $vEspecieCapturada['lin_id'] ?> </td>
-                            <td name="inputEspecie" > <?= $vEspecieCapturada['esp_nome_comum'] ?> </td>
-                            <td name="inputQuantidade"> <?= $vEspecieCapturada['spc_quantidade'] ?> </td>
-                            <td name="inputPeso"> <?= $vEspecieCapturada['spc_peso_kg'] ?> </td>
-                            <td name="inputPreco"> <?= $vEspecieCapturada['spc_preco'] ?> </td>
-                            <td><input type="button" class="button-del" width="5%" onclick="jsDeleteEspecieCapturada(<?= $this->entrevista['lin_id'] ?>, '<?= $this->url(array("controller" => "linha", "action" => "deletespecie"), null, true) ?>', <?= $vEspecieCapturada['spc_lin_id'] ?>)"></td>
-                        </tr>
-                    <?php endforeach; ?>
-                </table>
-            </fieldset>
+         <?php include('tableespcaptura.phtml'); ?>
+         
     </fieldset>
     <fieldset class="noEditable"><legend>Avistamento:</legend>
         <fieldset class="noEditable"><legend>O Que foi avistado:</legend>
